# svd-pca

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
pgm/: mona_lisa_b.pgm
pgm/split/: mona_lisa.pgm.header  mona_lisa.pgm.txt  mona_lisa.pgm_60.pgm  mona_lisa.pgm_b.pgm.SVD_60
report/: esarver_svd-pca.aux  esarver_svd-pca.fdb_latexmk  esarver_svd-pca.fls  esarver_svd-pca.tex
src/: CMakeLists.txt  code.ps  main.cpp
src/processing/: CMakeLists.txt  svd.cpp  svd.cpp.autosave  svd.hpp
src/types/: CMakeLists.txt  float16.cpp  float16.hpp
src/utility/: CMakeLists.txt  convert.cpp  convert.hpp  program_options.cpp  program_options.hpp
test/: CMakeLists.txt
test/processing/: CMakeLists.txt  all_tests.cpp  svd_tests.hpp
test/types/: CMakeLists.txt  all_tests.cpp  float16_tests.hpp
test/utility/: program_options_tests.hpp
tools/: error_calc.py  split_pgm.py
